--- a/src/views/index.html
+++ b/src/views/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="shortcut icon" type="x-icon" href="galaxy-logo.png">
+    <link rel="shortcut icon" type="x-icon" href="/Galaxy/src/assets/galaxy-logo.png">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="With this HTML and CSS robot project, I took my first steps into the exciting world of web development and robotics.">
     <meta name="author" content="Bea Lugtu">
     <meta name="keywords" content="Cosmic, Stars, Universe, Imagination, Science, Art, Journey, Wonders, Bea Lugtu">
-    <link rel="stylesheet" href="galaxy.css">
+    <link rel="stylesheet" href="/Galaxy/src/styles/galaxy.css">
     <title>Starry Imagination: Exploring the Cosmos Through Art</title>
 </head>
 <body>
